--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- favicon -->
     <link rel="icon" type="image/svg+xml" href="/public/favicon/byh.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>byHYONS</title>
+    <title>BoolFlix</title>
   </head>
   <body class="debug">
 
